package HW_5.Model;

import HW_5.Order.Order;

public class IndividualOrder extends Order {

    public IndividualOrder(String clientName, String product, int qnt, double price) {
        super(clientName, product, qnt, price);
    }

}
