package HW_5.View;


public interface ConsoleInput {

    void inputFromConsole();

}
