package HW_5.View;

public interface SaveToFile {

    void saveToJson();

    void saveToTxt();

    void saveToAllFormat();
}
